# client-server

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: httpclient.cpp  httpclient.h  httpclient.hpp  main.cpp  requestbuilder.cpp  requestbuilder.h  requestbuilder.hpp
client/src/models/: graph.cpp  graph.hpp  user.cpp  user.h
lib/: CMakeLists.txt  requesthandler.h
lib/common/: config.cpp  config.h  jsonutils.cpp  jsonutils.h  logger.cpp  logger.hpp
server/: CMakeLists.txt
server/config/: app.json  config.ini  config.json
server/src/: httpserver.cpp  httpserver.h  httpserver.hpp  main.cpp
server/src/handlers/: graphhandler.cpp  hellohandler.cpp  settingshandler.cpp  settingshandler.h  usershandler.cpp
server/src/handlers/include/: basehandler.h  basehandler.hpp  graph.hpp  graphhandler.h  hello.h  hello.hpp  objects.h  objects.hpp  settings.hpp  users.h  users.hpp
server/src/handlers/src/: graph.cpp  graphhandler.cpp  hello.cpp  hellohandler.cpp  objects.cpp  settings.cpp  settingshandler.cpp  users.cpp  usershandler.cpp
server/src/middleware/: authmiddleware.cpp  loggermiddleware.cpp
server/src/middleware/include/: authmiddleware.h  authmiddleware.hpp  loggermiddleware.h  loggermiddleware.hpp
server/src/middleware/src/: authmiddleware.cpp  loggermiddleware.cpp
server/src/storage/include/: branch_ptr.hpp  poisition_size.hpp  pool.hpp  position_list.hpp  result_code.hpp  select_params.hpp  space_item.hpp  space_tree.hpp  spc_obj.hpp  storage.hpp  store_settings.hpp  type_root_item.hpp  user_chanal.hpp
server/src/storage/src/: storage.cpp
